package com.jyoti.auth.util

const val AUTH_EMAIL_INPUT = "AUTH_EMAIL_INPUT"
const val AUTH_PASSWORD_INPUT = "AUTH_PASSWORD_INPUT"
const val AUTH_RE_ENTER_PASSWORD_INPUT = "AUTH_RE_ENTER_PASSWORD_INPUT"
const val SIGN_UP_BUTTON = "SIGN_UP_BUTTON"
const val LOGIN_BUTTON = "LOGIN_BUTTON"
const val EMAIL_ERROR_TEXT = "EMAIL_ERROR_TEXT"
const val PASSWORD_ERROR_TEXT = "PASSWORD_ERROR_TEXT"
const val LOGIN_SCREEN_ROOT = "LOGIN_SCREEN_ROOT"
const val PROGRESS_BAR = "PROGRESS_BAR"

const val HIDE_PASSWORD = "Hide Password"
const val SHOW_PASSWORD = "Show Password"
const val CLEAR_TEXT = "Clear Text"